# ynab-tools

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile.amazon  Dockerfile.monitor  LICENSE  README.md  pyproject.toml  ruff.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
docs/rca/: 2026-03-22-double-counted-cc-transfers.md
scripts/: release.sh
src/ynab_tools/: __init__.py  exceptions.py
src/ynab_tools/amazon/: matcher.py  memo.py  prompts.py  runner.py  scraper.py  sync.py
src/ynab_tools/cli/: _client.py  amazon.py  app.py  daemon.py  monitor.py
src/ynab_tools/config/: settings.py
src/ynab_tools/core/: cache.py  client.py  delta.py  models.py  money.py
src/ynab_tools/daemon/: scheduler.py
src/ynab_tools/monitor/: accounts.py  cc_payments.py  expenses.py  projection.py  runner.py  scheduler.py  thresholds.py
src/ynab_tools/notify/: apprise.py  notifiarr.py  types.py
tests/: conftest.py
tests/amazon/: test_matcher.py  test_memo.py  test_sync.py
tests/core/: test_cache.py  test_client.py  test_delta.py  test_money.py
tests/daemon/: test_scheduler.py
tests/monitor/: test_cc_payments.py  test_expenses.py  test_projection.py  test_scheduler.py  test_thresholds.py
tests/notify/: test_apprise.py  test_notifiarr.py  test_types.py
