[project]
name = "ynab-tools"
dynamic = ["version"]
description = "YNAB balance monitoring and Amazon transaction annotation"
readme = {text = "", content-type = "text/plain"}
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.28.0",
    "pydantic[email]>=2.11.0",
    "pydantic-settings>=2.8.0",
    "apprise>=1.9.0",
    "loguru>=0.7.3",
    "typer>=0.15.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
amazon = [
    "amazon-orders>=3.2.15",
    "cache-decorator>=2.2.0",
]
ai = [
    "openai>=1.12.0",
]

[project.urls]
Repository = "https://github.com/baker-scripts/ynab-tools"
Issues = "https://github.com/baker-scripts/ynab-tools/issues"

[project.scripts]
ynab-tools = "ynab_tools.cli.app:app"

[tool.hatch.version]
path = "src/ynab_tools/__init__.py"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.390",
    "ruff>=0.11.0",
]
test = [
    "faker>=37.1.0",
    "polyfactory>=2.20.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.uv]
# amazoncaptcha pins requests<2.31 and pillow<10 — override with safe versions
override-dependencies = [
    "requests>=2.32.4",
    "pillow>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
